<resources>
    <string name="app_name">Work Time</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="dash">-</string>
    <string name="loading">Loading&#8230;</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="none">None</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="yearsShort">y</string>
    <string name="monthsShort">m</string>
    <string name="daysShort">d</string>
    <string name="hoursShort">h</string>
    <string name="lbl_reporting_export_type">Export Type</string>
    <string name="lbl_reporting_export_type_prompt">Select an export type</string>
    <string name="lbl_reporting_export_filename">Filename</string>
    <string name="lbl_reporting_export_filename_required">The filename is required and should contain at least 3 characters</string>
    <string name="lbl_reporting_export_csv_separator">CSV Separator</string>
    <string name="reporting_export_csv_separator_prompt">Select CSV Separator</string>
    <string name="lbl_reporting_export_data">Data to export</string>
    <string name="lbl_reporting_export_data_prompt">Select which data to use</string>
    <string name="pref_date_and_time_display_hour_12_24_format_prompt">12h/24h time configuration</string>
    <string name="pref_date_and_time_display_hour_12_24_format_summary">Choose the 12-hour, 24-hour or the system default display method for hours.</string>
    <string name="pref_date_and_time_display_hour_12_24_format_dialog_title">Select 12h/24h configuration</string>
    <string name="pref_date_and_time_week_starts_on_prompt">Week starts on&#8230;</string>
    <string name="pref_date_and_time_week_starts_on_summary">Choose the day that the week starts on.</string>
    <string name="pref_date_and_time_week_starts_on_dialog_title">Select starting day</string>
    <string name="pref_date_and_time_time_registrations_precision_prompt">Time precision</string>
    <string name="pref_date_and_time_time_registrations_precision_summary">Choose the time precision strategy to use.</string>
    <string name="pref_date_and_time_time_registrations_precision_dialog_title">Select time precision</string>
    <string name="pref_backup_title">Backup</string>
    <string name="pref_backup_summary">Backup all WorkTime data on this device</string>
    <string name="pref_restore_title">Restore</string>
    <string name="pref_restore_summary">Restore the WorkTime data on this device from a previous backup from this or another device</string>
    <string name="pref_backup_send_title">Send backup&#8230;</string>
    <string name="pref_backup_send_summary">Send backup-file to your computer through email</string>
    <string name="pref_backup_location_title">Location of backups</string>
    <string name="pref_backup_location_summary">Set the location where backup files should be stored. If the configured location cannot be accessed the default location will be used.</string>
    <string name="pref_backup_restore_doc_title">Backup/Restore documentation</string>
    <string name="pref_backup_restore_doc_summary">Read the backup/restore functionality documentation.</string>
    <string name="pref_time_registrations_sub_category_general_title">General</string>
    <string name="pref_time_registrations_sub_category_punch_in_title">Punch In</string>
    <string name="pref_time_registrations_sub_category_punch_out_title">Punch Out</string>
    <string name="pref_time_registrations_sub_category_action_dialog_title">Action Dialog</string>
    <string name="pref_time_registrations_auto_close_60s_gap_title">Auto close 60s gap</string>
    <string name="pref_time_registrations_auto_close_60s_gap_summary_on">The start time of the a newly started time registration will be modified to close maximum a 60s gap with the previous time registration</string>
    <string name="pref_time_registrations_auto_close_60s_gap_summary_off">The start time of the a newly started time registration will not be modified.</string>
    <string name="pref_time_registrations_punch_bar_enabled_from_home_screen_title">Punch-bar on main screen</string>
    <string name="pref_time_registrations_punch_bar_enabled_from_home_summary_on">The punch-bar is visible at the bottom of the main screen</string>
    <string name="pref_time_registrations_punch_bar_enabled_from_home_summary_off">The punch-bar is not visible</string>
    <string name="pref_time_registrations_punch_bar_enabled_on_all_screens_title">Punch-bar on all screens</string>
    <string name="pref_time_registrations_punch_bar_enabled_on_all_screens_summary_on">The punch-bar will be shown on all screens</string>
    <string name="pref_time_registrations_punch_bar_enabled_on_all_screens_summary_off">The punch-bar will only be shown on the main screen</string>
    <string name="pref_widget_ask_for_task_selection_if_only_one_title">Ask for task if only one available</string>
    <string name="pref_widget_ask_for_task_selection_if_only_one_summary_on">If only one task is selectable, ask me to select a task when starting a time registration</string>
    <string name="pref_widget_ask_for_task_selection_if_only_one_summary_off">If only one task is selectable, do not ask me to select a task when starting a time registration but auto-select the only task found</string>
    <string name="pref_widget_ask_for_comment_title">Ask for comment?</string>
    <string name="pref_widget_ask_for_comment_summary_on">Ask to enter a comment in the action dialog for the option \'Punch Out\'.</string>
    <string name="pref_widget_ask_for_comment_summary_off">Do not ask to enter a comment in the action dialog for the option \'Punch Out\'.</string>
    <string name="pref_immediate_punch_out_title">Immediate punch out</string>
    <string name="pref_immediate_punch_out_summary_on">The action dialog is skipped and the punch out is done immediately (not possible to enter a comment on punch out).</string>
    <string name="pref_immediate_punch_out_summary_off">The action dialog is shown first in which you can choose another action to be executed instead of punching out.</string>
    <string name="pref_widget_ask_for_finishing_task_title">Ask for finishing task?</string>
    <string name="pref_widget_ask_for_finishing_task_summary_on">Ending a time registration will ask if you want to finish the selected task. This does not work for the action dialog option \'Punch Out and start next\'!</string>
    <string name="pref_widget_ask_for_finishing_task_summary_off">Ending a time registration will not ask if you want to finish the selected task.</string>
    <string name="pref_time_registrations_default_tr_action_ongoing_title">Default action for ongoing Time Registrations</string>
    <string name="pref_time_registrations_default_tr_action_ongoing_summary">Select the default action that will be selected in the dialog when performing an action on an ongoing time registration.</string>
    <string name="pref_time_registrations_default_tr_action_finished_title">Default action for finished Time Registrations</string>
    <string name="pref_time_registrations_default_tr_action_finished_summary">Select the default action that will be selected in the dialog when performing an action on a finished time registration.</string>
    <string name="pref_time_registrations_default_tr_action_dialog_title">Select the default action</string>
    <string name="pref_time_registrations_split_default_gap_title">Default gap when splitting</string>
    <string name="pref_time_registrations_split_default_gap_summary">Gap in minutes:</string>
    <string name="pref_time_registrations_split_default_gap_summary_text">Define the default gap in minutes when splitting two time registrations</string>
    <string name="pref_time_registrations_split_default_gap_units_right">min</string>
    <string name="pref_account_sync_interval_title">Synchronisation Interval</string>
    <string name="pref_account_sync_interval_summary">Select after how many hours the device should try to synchronize your data.</string>
    <string name="pref_account_sync_interval_dialog_title">Select Interval</string>
    <string name="pref_account_sync_interval_fixed_time_title">Fixed time for synchronization</string>
    <string name="pref_account_sync_interval_fixed_time_summary">Select a fixed time when to synchronize the data of this device to your account. This is only available when you have chosen time interval of once a day.</string>
    <string name="pref_account_sync_interval_fixed_time_dialog_title">Select a time</string>
    <string name="pref_account_sync_conflict_handling_title">Synchronisation Conflicts</string>
    <string name="pref_account_sync_conflict_handling_summary">Set up what to do in case of a conflict during synchronisation.</string>
    <string name="pref_account_sync_conflict_handling_dialog_title">Select a Solution</string>
    <string name="pref_account_sync_on_wifi_only_title">Only Synchronize on Wifi</string>
    <string name="pref_account_sync_on_wifi_only_summary">Synchronization will only start when connected on a Wifi network.</string>
    <string name="pref_account_sync_retry_on_error_title">Retry on error</string>
    <string name="pref_account_sync_retry_on_error_summary">If synchronization fails due to an error retry to synchronize every five minutes until it succeeds again.</string>
    <string name="pref_account_backup_before_sync_title">Create backup before syncing?</string>
    <string name="pref_account_backup_before_sync_summary_on">Create a backup before starting to sync all data.</string>
    <string name="pref_account_backup_before_sync_summary_off">Start syncing all data without creating a backup first.</string>
    <string name="pref_account_sync_success_show_notifications_title">Show notifications on success</string>
    <string name="pref_account_sync_success_show_notifications_summary_on">Show notifications when synchronization was successful.</string>
    <string name="pref_account_sync_success_show_notifications_summary_off">Do not show notifications when synchronization was successful.</string>
    <string name="pref_account_sync_error_show_notifications_title">Show notifications on error</string>
    <string name="pref_account_sync_error_show_notifications_summary_on">Show notifications when an error occurred during synchronization.</string>
    <string name="pref_account_sync_error_show_notifications_summary_off">Do not show notifications when an error occurred during synchronization.</string>
    <string name="pref_account_sync_error_show_notification_cases_title">Synchronisation errors to show</string>
    <string name="pref_account_sync_error_show_notification_cases_summary">Select for which synchronisation errors a notification should be shown.</string>
    <string name="pref_account_sync_error_show_notification_cases_dialog_title">Synchronisation Errors</string>
    <string name="lbl_account_login_email_hint">Email</string>
    <string name="lbl_account_login_password_hint">Password</string>
    <string name="lbl_account_login_button_login">Login</string>
    <string name="lbl_account_login_or">OR</string>
    <string name="lbl_account_login_button_register">Create New Account</string>
    <string name="lbl_account_register_email_hint">Email</string>
    <string name="lbl_account_register_firstname_hint">First Name</string>
    <string name="lbl_account_register_lastname_hint">Last Name</string>
    <string name="lbl_account_register_password_hint">Password</string>
    <string name="lbl_account_register_password_confirmation_hint">Repeat Passsword</string>
    <string name="lbl_account_register_password_show">Show password?</string>
    <string name="lbl_account_register_password_button">Create Account</string>
    <string name="empty_content_description"></string>
</resources>