<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2012 Dirk Vranckaert
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:vranckaert="http://schemas.android.com/apk/res/eu.vranckaert.worktime">
    <PreferenceCategory android:title="@string/pref_time_registrations_sub_category_general_title">
        <CheckBoxPreference
                android:key="timeRegistrationAutoClose60sGap"
                android:defaultValue="true"
                android:title="@string/pref_time_registrations_auto_close_60s_gap_title"
                android:summaryOn="@string/pref_time_registrations_auto_close_60s_gap_summary_on"
                android:summaryOff="@string/pref_time_registrations_auto_close_60s_gap_summary_off" />
        <CheckBoxPreference
                android:key="timeRegistrationPunchBarEnabledFromHomeScreen"
                android:defaultValue="true"
                android:title="@string/pref_time_registrations_punch_bar_enabled_from_home_screen_title"
                android:summaryOn="@string/pref_time_registrations_punch_bar_enabled_from_home_summary_on"
                android:summaryOff="@string/pref_time_registrations_punch_bar_enabled_from_home_summary_off" />
        <CheckBoxPreference
                android:key="timeRegistrationPunchBarEnabledOnAllScreens"
                android:dependency="timeRegistrationPunchBarEnabledFromHomeScreen"
                android:defaultValue="false"
                android:title="@string/pref_time_registrations_punch_bar_enabled_on_all_screens_title"
                android:summaryOn="@string/pref_time_registrations_punch_bar_enabled_on_all_screens_summary_on"
                android:summaryOff="@string/pref_time_registrations_punch_bar_enabled_on_all_screens_summary_off" />
        <eu.vranckaert.worktime.utils.view.SeekBarPreference
                android:key="timeRegistrationSplitDefaultGap"
                android:title="@string/pref_time_registrations_split_default_gap_title"
                vranckaert:summaryText="@string/pref_time_registrations_split_default_gap_summary_text"
                android:summary="@string/pref_time_registrations_split_default_gap_summary"
                vranckaert:min="1"
                android:max="120"
                android:defaultValue="30"
                vranckaert:unitsLeft=""
                vranckaert:unitsRight="@string/pref_time_registrations_split_default_gap_units_right"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_time_registrations_sub_category_punch_in_title">
        <CheckBoxPreference
                android:key="askForTaskSelectionIfOnlyOne"
                android:defaultValue="true"
                android:title="@string/pref_widget_ask_for_task_selection_if_only_one_title"
                android:summaryOn="@string/pref_widget_ask_for_task_selection_if_only_one_summary_on"
                android:summaryOff="@string/pref_widget_ask_for_task_selection_if_only_one_summary_off" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_time_registrations_sub_category_punch_out_title">
        <CheckBoxPreference
                android:key="immediatePunchOut"
                android:defaultValue="false"
                android:title="@string/pref_immediate_punch_out_title"
                android:summaryOn="@string/pref_immediate_punch_out_summary_on"
                android:summaryOff="@string/pref_immediate_punch_out_summary_off" />
        <CheckBoxPreference
                android:key="widgetEndingTimeRegistrationFinishTaskPreference"
                android:defaultValue="false"
                android:title="@string/pref_widget_ask_for_finishing_task_title"
                android:summaryOn="@string/pref_widget_ask_for_finishing_task_summary_on"
                android:summaryOff="@string/pref_widget_ask_for_finishing_task_summary_off" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_time_registrations_sub_category_action_dialog_title">
        <ListPreference
                android:key="timeRegistrationDefaultActionOngoingTr"
                android:defaultValue="PUNCH_OUT"
                android:title="@string/pref_time_registrations_default_tr_action_ongoing_title"
                android:summary="@string/pref_time_registrations_default_tr_action_ongoing_summary"
                android:entries="@array/pref_time_registrations_default_tr_action_ongoing_options"
                android:entryValues="@array/pref_time_registrations_default_tr_action_ongoing_option_values"
                android:dialogTitle="@string/pref_time_registrations_default_tr_action_dialog_title" />
        <ListPreference
                android:key="timeRegistrationDefaultActionFinishedTr"
                android:defaultValue="SPLIT"
                android:title="@string/pref_time_registrations_default_tr_action_finished_title"
                android:summary="@string/pref_time_registrations_default_tr_action_finished_summary"
                android:entries="@array/pref_time_registrations_default_tr_action_finished_options"
                android:entryValues="@array/pref_time_registrations_default_tr_action_finished_option_values"
                android:dialogTitle="@string/pref_time_registrations_default_tr_action_dialog_title" />
        <CheckBoxPreference
                android:key="widgetEndingTimeRegistrationCommentPreference"
                android:defaultValue="true"
                android:title="@string/pref_widget_ask_for_comment_title"
                android:summaryOn="@string/pref_widget_ask_for_comment_summary_on"
                android:summaryOff="@string/pref_widget_ask_for_comment_summary_off" />
    </PreferenceCategory>
</PreferenceScreen>