<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2012 Dirk Vranckaert
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Old backup system -->
    <PreferenceScreen android:title="@string/pref_backup_title"
                      android:summary="@string/pref_backup_summary">
        <intent android:action="eu.vranckaert.worktime.SD_BACKUP_DATA"/>
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/pref_restore_title"
                      android:summary="@string/pref_restore_summary">
        <intent android:action="eu.vranckaert.worktime.SD_RESTORE_DATA"/>
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/pref_backup_send_title"
                      android:summary="@string/pref_backup_send_summary">
        <intent android:action="eu.vranckaert.worktime.SD_BACKUP_SEND"/>
    </PreferenceScreen>

    <Preference android:key="backupLocation"
                android:title="@string/pref_backup_location_title"
                android:summary="@string/pref_backup_location_summary"/>

    <PreferenceScreen android:title="@string/pref_backup_restore_doc_title"
                      android:summary="@string/pref_backup_restore_doc_summary">
        <intent android:action="eu.vranckaert.worktime.BACKUP_DOC"/>
    </PreferenceScreen>
</PreferenceScreen>