<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2012 Dirk Vranckaert

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
            android:key="displayHour1224Format"
            android:defaultValue="system-default"
            android:title="@string/pref_date_and_time_display_hour_12_24_format_prompt"
            android:summary="@string/pref_date_and_time_display_hour_12_24_format_summary"
            android:entries="@array/pref_date_and_time_display_hour_12_24_format_options"
            android:entryValues="@array/pref_date_and_time_display_hour_12_24_format_option_values"
            android:dialogTitle="@string/pref_date_and_time_display_hour_12_24_format_dialog_title" />
    <ListPreference
            android:key="weekStartsOn"
            android:defaultValue="7"
            android:title="@string/pref_date_and_time_week_starts_on_prompt"
            android:summary="@string/pref_date_and_time_week_starts_on_summary"
            android:entries="@array/pref_date_and_time_week_starts_on_options"
            android:entryValues="@array/pref_date_and_time_week_starts_on_option_values"
            android:dialogTitle="@string/pref_date_and_time_week_starts_on_dialog_title" />
    <ListPreference
            android:key="timePrecision"
            android:defaultValue="2"
            android:title="@string/pref_date_and_time_time_registrations_precision_prompt"
            android:summary="@string/pref_date_and_time_time_registrations_precision_summary"
            android:entries="@array/pref_date_and_time_time_registrations_precision_options"
            android:entryValues="@array/pref_date_and_time_time_registrations_precision_option_values"
            android:dialogTitle="@string/pref_date_and_time_time_registrations_precision_dialog_title" />
</PreferenceScreen>