<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account_login_error"
        style="@style/WorkTimeValidationError"/>

    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:hint="@string/lbl_account_login_email_hint"
              android:id="@+id/account_login_email"
              android:inputType="textEmailAddress"/>
    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:hint="@string/lbl_account_login_password_hint"
              android:id="@+id/account_login_password"
              android:password="true"
              android:inputType="textPassword"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/account_login_button"
            android:text="@string/lbl_account_login_button_login"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/lbl_account_login_or"
              android:layout_gravity="center_horizontal"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/account_login_register_button"
            android:text="@string/lbl_account_login_button_register"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"/>
</LinearLayout>