<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2012 Dirk Vranckaert
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <!-- Spinner for selecting export type (CSV, Excel,...) -->
        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/lbl_reporting_export_type"/>
        <Spinner android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:drawSelectorOnTop="true"
                 android:id="@+id/reporting_export_type"
                 android:prompt="@string/lbl_reporting_export_type_prompt"/>

        <!-- Filename -->
        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/lbl_reporting_export_filename"/>
        <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:id="@+id/reporting_export_filename_required"
              style="@style/WorkTimeValidationError"
              android:text="@string/lbl_reporting_export_filename_required"/>
        <EditText android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/reporting_export_filename"
                  android:inputType="text"/>

        <!-- In case of CSV: CSV seperator -->
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:id="@+id/reporting_export_csv_separator_container"
                      android:visibility="gone">
            <ImageView style="@style/WorkTimeListSeparator"
                       android:contentDescription="@string/empty_content_description"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/lbl_reporting_export_csv_separator"/>
            <Spinner android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:drawSelectorOnTop="true"
                     android:id="@+id/reporting_export_csv_separator"
                     android:prompt="@string/reporting_export_csv_separator_prompt"/>
        </LinearLayout>

        <!-- Spinner for selecting the data to be used in the CSV export (raw or table) -->
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:id="@+id/reporting_export_data_container"
                      android:visibility="gone">
            <ImageView style="@style/WorkTimeListSeparator"
                       android:contentDescription="@string/empty_content_description"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/lbl_reporting_export_data"/>
            <Spinner android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:drawSelectorOnTop="true"
                     android:id="@+id/reporting_export_data"
                     android:prompt="@string/lbl_reporting_export_data_prompt"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
